# platform.core.system.crash-worker

./: CMakeLists.txt  NOTICE
packaging/: crash-worker.manifest  crash-worker.spec
src/crash-manager/: 99-crash-manager.conf.in  CMakeLists.txt  crash-init.service.in  crash-init.sh.in  crash-manager.service  crash-manager.sh  crash-manager.sh.in  set_corepattern.sh.in
src/crash-pipe/: CMakeFiles.txt  CMakeLists.txt  crash-pipe.c
src/crash-stack/: CMakeLists.txt  crash-stack-aarch64.c  crash-stack-arm.c  crash-stack-libelf-helpers.c  crash-stack-libelf.c  crash-stack-x86_64.c  crash-stack.c  crash-stack.cpp  crash-stack.h
src/crash-stack/wind/: LICENCE  README  client.c  client.h  simclient.c  simclient.h  simplefunc.c  system.h  unwarm.c  unwarm.h  unwarm_arm.c  unwarm_thumb.c  unwarminder.c  unwarminder.h  unwarmmem.c  unwarmmem.h  unwind.sym
src/dump_systemstate/: CMakeLists.txt  dump_systemstate.c
src/shared/: log.h  util.c  util.h
src/sys-assert/: CMakeLists.txt  sys-assert.c  sys-assert.conf.in  sys-assert.h  util.c  util.h
src/sys-assert/arm/: backtrace.c  context.c
src/sys-assert/arm_64/: backtrace.c  context.c
src/sys-assert/x86/: backtrace.c  context.c  sys-assert-regs.h
src/sys-assert/x86_64/: backtrace.c
