CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(crash-worker C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

# Sub modules
ADD_SUBDIRECTORY(src/crash-manager)

IF("${SYS_ASSERT}" STREQUAL "on")
	ADD_SUBDIRECTORY(src/sys-assert)
ELSE("${SYS_ASSERT}" STREQUAL "on")
	ADD_SUBDIRECTORY(src/crash-pipe)
	ADD_SUBDIRECTORY(src/crash-stack)
ENDIF("${SYS_ASSERT}" STREQUAL "on")

ADD_SUBDIRECTORY(src/dump_systemstate)

