CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CRASH_MANAGER "crash-manager")

CONFIGURE_FILE(${CRASH_MANAGER}.sh.in ${CRASH_MANAGER}.sh @ONLY)
CONFIGURE_FILE(99-${CRASH_MANAGER}.conf.in 99-${CRASH_MANAGER}.conf @ONLY)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/${CRASH_MANAGER}/${CRASH_MANAGER}.sh
		DESTINATION ${TZ_SYS_BIN}
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/${CRASH_MANAGER}/99-${CRASH_MANAGER}.conf
		DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/sysctl.d
		PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
