CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(dump_systemstate C)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
SET(SRCS
	dump_systemstate.c
	${CMAKE_SOURCE_DIR}/src/shared/util.c
   )

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED dlog)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g -fno-omit-frame-pointer -finstrument-functions")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
MESSAGE("FLAGS: ${CMAKE_C_FLAGS}")

ADD_DEFINITIONS("-DCRASH_SYS_BIN=\"${TZ_SYS_BIN}\"")
ADD_DEFINITIONS("-DCRASH_SYS_ETC=\"${TZ_SYS_ETC}\"")
ADD_DEFINITIONS("-DCRASH_SYS_RO_ETC=\"${TZ_SYS_RO_ETC}\"")
ADD_DEFINITIONS("-DCRASH_SYS_RUN=\"${TZ_SYS_RUN}\"")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
