CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(LIBNAME sys-assert)
SET(SRCS
		sys-assert.c
		util.c
)

IF("$ENV{CFLAGS}" MATCHES "-DARM")
SET(SRCS ${SRCS}
		arm/context.c
		arm/backtrace.c
)
ELSE("$ENV{CFLAGS}" MATCHES "-DARM")
SET(SRCS ${SRCS}
		x86/context.c
		x86/backtrace.c
)
ENDIF("$ENV{CFLAGS}" MATCHES "-DARM")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE(FindPkgConfig)
pkg_check_modules(ppkgs REQUIRED libtzplatform-config libunwind)

FOREACH(flag ${ppkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_LIBRARY(${LIBNAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${LIBNAME} ${ppkgs_LDFLAGS} -ldl)

INSTALL(TARGETS ${LIBNAME} LIBRARY DESTINATION ${LIB_INSTALL_DIR})

CONFIGURE_FILE(sys-assert.conf.in sys-assert.conf)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/sys-assert.conf DESTINATION /usr/lib/sysctl.d)
